Attempt at fixing annoying y overflow in code snippets on mobile

--- a/assets/css/pygment_highlights.css
+++ b/assets/css/pygment_highlights.css
@@ -69,5 +69,6 @@
     display: block;
     white-space: pre;
     overflow-x: auto;
+    overflow-y: hidden;
     word-wrap: normal;
 }
